--- a/index.html
+++ b/index.html
@@ -5,6 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Card</title>
+
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <img class="pattern-img-top" src="./assets/bg-pattern-top.svg" alt="" />
+    <img
+      class="pattern-img-bottom"
+      src="./assets/bg-pattern-bottom.svg"
+      alt=""
+    />
+    <main class="container">
+      <div class="pattern-img">
+        <img src="./assets/bg-pattern-card.svg" alt="Image" />
+      </div>
+      <div class="card-content">
+        <div class="profile-img">
+          <img src="./assets/image-victor.jpg" alt="Profile" />
+        </div>
+        <div class="private">
+          <h3>Victor Crest<strong>26</strong></h3>
+          <span>London</span>
+        </div>
+        <hr />
+        <div class="information">
+          <div class="information-item">
+            <h4>80K</h4>
+            <span>Followers</span>
+          </div>
+          <div class="information-item">
+            <h4>803K</h4>
+            <span>Likes</span>
+          </div>
+          <div class="information-item">
+            <h4>1.4K</h4>
+            <span>Photos</span>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
